# MPGK

./: CMakeLists.txt  Macierz.h  Program.cpp  Program.h  Przeksztalcenia.h  Wektor.h
freeglut/: CMakeCache.txt  cmake_install.cmake
freeglut/FreeGLUT/: FreeGLUTTargets.cmake
freeglut/lib/: libglut.so.3.11.0
